    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 101 - 10/10/2006 <==

C <mave> all OutputFunction (except for PoolFunction) are propertized
C <mave> VectorData copy-constructor create always a VectorData with own data allocated

    ==> 100 - 05/10/2006 <==

C <mave> CopyLinker propertized
B <mave> various bugfixes in the library
C <mave> Factory is now integrated with Propertized classes and use PropertySettings as
            creators' parameters

    ==> 99 - 20/09/2006 <==

C <mave> SparseMatrixLinker propertized
C <mave> MatrixLinker propertized
C <mave> Linker propertized
C <mave> add Cluster* type to Variant
C <mave> in the Linker hierarchy, clusters from and to are now attributes of base class Linker;
            subclasses changed accordlying
C <mave> DDECluster propertized
C <mave> using VectorData views for speed-up implementation of FakeCluster
C <mave> FakeCluster propertized

    ==> 98 - 20/09/2006 <==

C <mave> BiasedCluster propertized
C <mave> SimpleCluster propertized
C <mave> Cluster propertized
C <mave> Updatable propertized
+ <mave> Variant now support OutputFunction pointers

    ==> 97 - 20/09/2006 <==

C <mave> nnfw.h also includes ionnfw header, now
C <mave> the method Cluster::setUpdater has been renamed to setFunction
C <mave> all subclasses of ClusterUpdater are changed accordlying;
           i.e. SigmoidUpdater to SigmoidFunction, etc
C <mave> ClusterUpdater class has been renamed to OutputFunction

    ==> 96 - 11/09/2006 <==

+ <mave> PropertySettings type: the base type for configuring object via Properties

    ==> 95 - 08/09/2006 <==

C <mave> CREDITS file

    ==> 94 - 08/09/2006 <==
