@@ -15,6 +15,11 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 102 - 17/10/2006 <==
+
+- <marmir> Removed mask property (and the related functions) from BaseNeuralNet in neuralnet.h (you can use SetOrder, instead)
++ <marmir> Added another constructor to SparseMatrixLinker in which you can specify the probability of connectivity and whether the matrix has zeros in the diagonal
+
     ==> 101 - 10/10/2006 <==
 
 C <mave> all OutputFunction (except for PoolFunction) are propertized
